<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activity.LoginActivity"
    >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/black"
        >
        <ImageView
            android:id="@+id/iv_login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nav_back"
            android:layout_marginLeft="15dp"
            android:padding="5dp"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/login_register"
            android:text="@string/login_title"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_login_icon"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_icon"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/rl_top"
        android:layout_centerHorizontal="true"
        />
    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/iv_login_icon"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/et_user"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_user"
            android:textSize="@dimen/login_user"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="75dp"
            android:textColor="@color/login_textval"
            android:textColorHint="@color/login_text"
            android:gravity="left|center"
            android:maxLength="11"
            android:maxLines="1"
            android:inputType="phone"
            />
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/icon_delete"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:visibility="visible"
            />
    </RelativeLayout>

    <View
        android:id="@+id/vw_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_line"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/rl_user"
        ></View>
    <RelativeLayout
        android:id="@+id/rl_psw"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/vw_line1"
        >
        <EditText
            android:id="@+id/et_psw"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_psw"
            android:textSize="@dimen/login_user"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="75dp"
            android:textColor="@color/login_textval"
            android:textColorHint="@color/login_text"
            android:gravity="left|center"
            android:maxLines="1"
            android:inputType="textPassword"
            />
        <ImageView
            android:id="@+id/iv_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_invisible"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
    </RelativeLayout>

    <View
        android:id="@+id/vw_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_line"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/rl_psw"
        ></View>
    
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/white"
        android:textSize="@dimen/login_sure"
        android:text="@string/login_sure"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/vw_line2"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:background="@drawable/login_surebg1"
        />
    <View
        android:id="@+id/vw_line3"
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:background="@color/login_text"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        >
    </View>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/login_text"
        android:textSize="@dimen/login_register"
        android:text="@string/login_register"
        android:layout_below="@+id/tv_login"
        android:layout_toLeftOf="@+id/vw_line3"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tv_findpsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/login_text"
        android:textSize="@dimen/login_register"
        android:text="@string/login_findpsw"
        android:layout_below="@+id/tv_login"
        android:layout_toRightOf="@+id/vw_line3"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/iv_bottom_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/miguo_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />
</RelativeLayout>
