<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activity.ResetPswActivity"
    >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/black"
        >
        <ImageView
            android:id="@+id/iv_resetpsw_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/nav_back"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/login_register"
            android:text="@string/resetpsw_title"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_psw0"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/rl_top"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/et_psw0"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/resetpsw_sure0"
            android:textSize="@dimen/login_user"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="75dp"
            android:textColor="@color/login_textval"
            android:textColorHint="@color/login_text"
            android:gravity="left|center"
            android:maxLines="1"
            android:inputType="textPassword"
            />
        <ImageView
            android:id="@+id/iv_close0"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/password_invisible"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
    </RelativeLayout>

    <View
        android:id="@+id/vw_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_line"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/rl_psw0"
        ></View>

    <RelativeLayout
        android:id="@+id/rl_psw1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/vw_line1"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/et_psw1"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/find_pswagain"
            android:textSize="@dimen/login_user"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="75dp"
            android:textColor="@color/login_textval"
            android:textColorHint="@color/login_text"
            android:gravity="left|center"
            android:maxLines="1"
            android:inputType="textPassword"
            />
        <ImageView
            android:id="@+id/iv_close1"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/password_invisible"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
    </RelativeLayout>

    <View
        android:id="@+id/vw_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_line"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/rl_psw1"
        ></View>

    <TextView
        android:id="@+id/tv_findpsw"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/white"
        android:textSize="@dimen/login_sure"
        android:text="@string/resetpsw_sure"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/vw_line2"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:background="@drawable/login_surebg1"
        />

    <ImageView
        android:id="@+id/iv_bottom_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/miguo_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />
</RelativeLayout>


